--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
     </nav>
 
-    <div class="d-flex justify-content-evenly mt-5 bio-bg">
+    <div class="div-profile d-flex justify-content-evenly mt-5 bio-bg">
         <div class="m-5">
             <img class="img-zaid p-3 cursor-pointer" src="Assets/Zaid.jpg" alt="Zaid Ahmed">
         </div>
-        <div class="bio-div-2 mt-5 cursor-pointer">
+        <div class="div-2-profile bio-div-2 mt-5 cursor-pointer">
             <span class="fs-3 fw-semibold text-hi">Hi</span> <span class="fs-6 text-white"> , I am</span> <span class="fs-3 fw-semibold text-white">Zaid Ahmed</span><br>
             <span class="fs-4 fw-medium text-white">Frontend Developer</span>
         </div>
